Added macro to make

--- a/Debug/makefile
+++ b/Debug/makefile
@@ -4,6 +4,8 @@ LFLAG = -std=c++17 -lstdc++ -lpthread -lm
 
 OBJS = 
 
+TARGET = drserver
+
 include src/subdir.mk
 include src/iores/subdir.mk
 include src/topt/subdir.mk
@@ -12,9 +14,9 @@ include src/gameres/itemres/subdir.mk
 include src/gameres/monsterres/subdir.mk
 include src/gameres/physmapres/subdir.mk
 
-all: drserver
+all: $(TARGET)
 
-drserver: $(OBJS)
+$(TARGET): $(OBJS)
 	$(CC) $(OBJS) $(LFLAG) -o drserver
 clean:
 	rm -f $(OBJS)
