DLL WORKS windows side

--- a/Debug/makefilew
+++ b/Debug/makefilew
@@ -1,11 +1,12 @@
 CC = cl
 TARGET = drserver
 CFLAG = /EHsc /c
+INCLUDES = /I ..\socketlib
+LINKS = /link ..\socketlib\libsocket.lib
 OBJS = 
 
 include src\subdirw.mk
 include src\topt\subdirw.mk
-include src\iores\subdirw.mk
 include src\gameres\subdirw.mk
 include src\gameres\itemres\subdirw.mk
 include src\gameres\monsterres\subdirw.mk
@@ -14,7 +15,7 @@ include src\gameres\physmapres\subdirw.mk
 all: $(TARGET)
 
 $(TARGET): $(OBJS)
-	$(CC) $(OBJS) /Fe: $(TARGET)
+	$(CC) $(OBJS) /Fe: $(TARGET) $(LINKS)
 
 clean:
 	del$(OBJS)
